@@ -2,6 +2,7 @@ Cacti CHANGELOG
 1.1.36
 -issue#1334: Console->Users->(Edit) Permissions checkmark descriptions missing
 -issue#1336: Fix issue with $config not being defined
+-issue#1348: Toggle context menu of Zoom
 -issue: Fixed some language string inconsistencies
 -feature: Updated Dutch translations
 
